[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Esquashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.22084, 25.3535 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 128
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0.858848, -15.0973 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
position = Vector2( -9.53516, -0.529731 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -15.2369, 5.93675 )
shape = SubResource( 3 )

[node name="sides_checker2" type="Area2D" parent="."]
position = Vector2( -3.70812, -0.529731 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker2"]
position = Vector2( 28.0946, 5.03244 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="body_entered" from="sides_checker2" to="." method="_on_sides_checker2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
